# Langchain-Find-Assist

backend/: db_err.txt  db_err2.txt  fix_db.py  pyproject.toml  test_db_insert.py  test_out.txt  test_out3.txt  test_out_final.txt  test_out_final2.txt  test_rag.py  test_rag2.py
backend/app/: __init__.py  main.py
backend/app/agents/: agents_chat_graph.py  agents_debug_log.py  agents_nodes.py  agents_state.py
backend/app/api/: chat.py  file_upload.py  routes_chat.py  routes_conversations.py  routes_files.py
backend/app/crud/: crud.py  crud_messages.py
backend/app/database/: database_chat.py  db_models.py  dt_chat.py
backend/app/models/: models.py  models_llm.py  models_messages.py
backend/app/processors/: Untitled  file_schema.py
backend/app/prompt/: System.txt
backend/app/routes/: routes_messages.py
backend/app/schemas/: chat_schemas.py  schemas.py  schemas_messages.py
backend/app/services/: services_file.py  services_generate_reply.py  services_pinecone.py  services_rag.py  services_retrieve_docs.py
backend/data/: policies.json
backend/tests/: test_db_init.py  verify_file_loading.py
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatHeader.jsx  ChatInput.jsx  MessageList.jsx  Sidebar.jsx
stitch/: DESIGN.md  code.html
