[project]
name = "find-assist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.0",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.1",
    "openai-whisper>=20250625",
    "pypdf>=6.7.2",
    "rich>=14.3.3",
    "sentence-transformers>=5.2.3",
]
